Address by comments